Bug 286048 - don't trigger conflict message when marking a mail manually as spam
Summary: don't trigger conflict message when marking a mail manually as spam
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mail Filter Agent (other bugs)
Version First Reported In: GIT (master)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 284849 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-07 21:42 UTC by Milian Wolff
Modified: 2012-10-13 22:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2011-11-07 21:42:30 UTC
Version:           Git (master)
OS:                Linux

often, when I'm marking a mail as spam (i.e. manually executing the filter for that action), I get a conflict dialog in modification time and flags, e.g.:


Modification Time:
07.11.2011 21:20:46

07.11.2011 21:37:26
Flags:
$ATTACHMENT, \SEEN

$ATTACHMENT, $JUNK


Reproducible: Didn't try

Steps to Reproduce:
mark mail manually as spam

Actual Results:  
every so often you get the conflict message, esp. when you select an unread message and directly hit the shortcut to mark-as-spam. I think the issue is that kmail2 needs really long to display the message, starts the filter inbetween and then the mark-as-read + mark-as-spam conflict

Expected Results:  
no conflict
Comment 1 Milian Wolff 2011-11-07 22:19:15 UTC
ignore: Reproducible: Didn't try

it's sometimes reproducible if you are fast enough
Comment 2 Chris 2012-02-07 05:17:52 UTC
I can comfirm this, KMail doesn't play nicely at all with unread e-mail messages on IMAP server. It tries to add a new copy for every scanned message back to the server.
Comment 3 András Manţia 2012-10-13 22:24:05 UTC
*** Bug 284849 has been marked as a duplicate of this bug. ***
Comment 4 András Manţia 2012-10-13 22:25:04 UTC
Git commit 21d7ebcfa071653ee7a7c184d45b344fd3bb8586 by Andras Mantia.
Committed on 14/10/2012 at 00:25.
Pushed by amantia into branch 'master'.

Disable revision check(conflict checking) if only flags were changed.
That is not very important and can be triggered relatively easily with reading mails while a filter is active.

For the bugs where I CC'd, please see if you can still reproduce it (the change affects
only when marking manually conflicted with marking the mail by a filter).
Related: bug 259574


FIXED-IN: 4.10

M  +1    -0    mailfilteragent/filtermanager.cpp

http://commits.kde.org/kdepim/21d7ebcfa071653ee7a7c184d45b344fd3bb8586
Comment 5 András Manţia 2012-10-13 22:25:54 UTC
Git commit a2adaa32fec765995b7241a7fb00c5876c82f842 by Andras Mantia.
Committed on 14/10/2012 at 00:25.
Pushed by amantia into branch 'KDE/4.9'.

Disable revision check(conflict checking) if only flags were changed.
That is not very important and can be triggered relatively easily with reading mails while a filter is active.

For the bugs where I CC'd, please see if you can still reproduce it (the change affects
only when marking manually conflicted with marking the mail by a filter).
Related: bug 259574

FIXED-IN: 4.9.3
(cherry picked from commit 21d7ebcfa071653ee7a7c184d45b344fd3bb8586)

M  +1    -0    mailfilteragent/filtermanager.cpp

http://commits.kde.org/kdepim/a2adaa32fec765995b7241a7fb00c5876c82f842