Disable revision check(conflict checking) if only flags were changed. That is not very important and can be triggered relatively easily with reading mails while a filter is active.

For the bugs where I CC'd, please see if you can still reproduce it (the change affects
only when marking manually conflicted with marking the mail by a filter).

BUG: 286048
CCBUG: 259574


FIXED-IN: 4.10